# ET-eds-api

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb  using_fetcher_p.ipynb  using_fetcher_ve.ipynb
ET_eds_api/: _cache.py  fetcher_p.py  fetcher_ve.py
eds/: __init__.py  fetcher_p.py  fetcher_ve.py
