[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ET-eds-api"
version = "0.1.0"
description = "Python client for the Energi Data Service API"
requires-python = ">=3.9"
dependencies = ["requests", "pandas"]

[project.urls]
"Source Code" = "https://github.com/cfn368/ET-eds-api"
